--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SalesProductAgreement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SalesProductAgreement.yaml
@@ -6,7 +6,7 @@ info:
     Sales Product Agreement (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/SalesProductAgreement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/SalesProductAgreement/12.0.1'
 paths:
   '/SalesProductAgreement/Evaluate':
       post:
@@ -2913,8 +2913,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - The contractual jurisdiction or coverage of the agreement (e.g.
+          "governed by State") Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -2959,8 +2961,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) - The term of the agreement DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
