--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ServiceDirectory.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ServiceDirectory.yaml
@@ -6,7 +6,7 @@ info:
     Service Directory (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ServiceDirectory/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ServiceDirectory/12.0.1'
 paths:
   '/ServiceDirectoryEntry/{servicedirectoryentryid}/Control':
       put:
@@ -5777,7 +5777,10 @@ components:
         description: (DDD Entity) - Number of objects represented as an integer.
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Service Directory Entry Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -5826,8 +5829,9 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) -  GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
