--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ServicingMandate.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ServicingMandate.yaml
@@ -6,7 +6,7 @@ info:
     Servicing Mandate (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ServicingMandate/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ServicingMandate/12.0.1'
 paths:
   '/ServicingMandateAgreement/Evaluate':
       post:
@@ -2208,8 +2208,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - The defines any limitation on the geographic coverage/scope of the
+          mandate Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -2254,8 +2256,10 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) - The term for the mandate to be in force
+          DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
