--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SyndicateManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SyndicateManagement.yaml
@@ -6,7 +6,7 @@ info:
     Syndicate Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/SyndicateManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/SyndicateManagement/12.0.1'
 paths:
   '/SyndicateMembership/{syndicatemembershipid}/Control':
       put:
@@ -2052,8 +2052,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Right to do something under the terms of Syndicate Membership
+          Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
