--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SyndicatedLoan.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SyndicatedLoan.yaml
@@ -6,7 +6,7 @@ info:
     Syndicated Loan (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/SyndicatedLoan/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/SyndicatedLoan/12.0.1'
 paths:
   '/SyndicatedLoanFacility/{syndicatedloanfacilityid}/Control':
       put:
@@ -7244,9 +7244,9 @@ components:
     Loan:
         type: object
         description: >-
-          (DDD Entity) - Act of provding an amount of money, a property or other material
-          goods to a another party in exchange for future repayment of the
-          principal amount along with interest or other finance charges. 
+          (DDD Entity) - Reference to Syndicated Loan Arrangement Loan|Loan
+          (https://www.iso20022.org/standardsrepository/type/Loan)|Standard|ISO20022
+          BM ()
         properties:
           PrincipalAmount:
               type: string
@@ -7264,7 +7264,10 @@ components:
               description: '(DDD Entity) - Loan is an intra-company loan. '
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Syndicated Loan Arrangement Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -7322,8 +7325,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Syndicated Loan
+          Arrangement in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -7368,10 +7373,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Syndicated Loan
+          Arrangement Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -7562,8 +7567,11 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Identifier within the parent organisation for the product. Must be
+          unique in the organisation. 
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
