--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/TradeandPriceReporting.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/TradeandPriceReporting.yaml
@@ -6,7 +6,7 @@ info:
     Trade and Price Reporting (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/TradeandPriceReporting/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/TradeandPriceReporting/12.0.1'
 paths:
   '/MarketTradeReportingOperatingSession/{markettradereportingoperatingsessionid}/Control':
       put:
@@ -2113,7 +2113,11 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Market Trade Reporting Operating Session Status
+          |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
