--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/Underwriting.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/Underwriting.yaml
@@ -6,7 +6,7 @@ info:
     Underwriting (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/Underwriting/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/Underwriting/12.0.1'
 paths:
   '/UnderwritingAssessment/Evaluate':
       post:
@@ -1305,8 +1305,10 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) - Guidelines provided for applying for an underwriting decision -
+          list submission requirements GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -1330,7 +1332,13 @@ components:
               description: '(DDD Entity) - Agency that publishes the governance rules. '
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - The associated product instance for the underwriting decision
+          Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -1406,9 +1414,9 @@ components:
     Loan:
         type: object
         description: >-
-          (DDD Entity) - Act of provding an amount of money, a property or other material
-          goods to a another party in exchange for future repayment of the
-          principal amount along with interest or other finance charges. 
+          (DDD Entity) - The proposed loan terms Loan|Loan
+          (https://www.iso20022.org/standardsrepository/type/Loan)|Standard|ISO20022
+          BM ()
         properties:
           PrincipalAmount:
               type: string
@@ -1435,7 +1443,13 @@ components:
           Note: A zero amount is considered a positive amount.
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference details known about the customer
+          Party/Persons/PersonProfile_x000D_
+
+          |Party/Persons/PersonProfile
+          (https://www.iso20022.org/standardsrepository/type/PersonProfile)|Standard|ISO20022
+          BM () ()
         properties:
           ContactPoint:
               type: string
@@ -1494,7 +1508,11 @@ components:
               description: '(DDD Entity) - Specifies the type of shareholding. '
     Asset:
         type: object
-        description: '(DDD Entity) - Tangible items of value to a business. '
+        description: >-
+          (DDD Entity) - Reference to the customers collateral holdings that are available
+          Asset|Asset
+          (https://www.iso20022.org/standardsrepository/type/Asset)|Standard|ISO20022
+          BM ()
         properties:
           ExpiryDate:
               type: string
@@ -1588,9 +1606,7 @@ components:
               description: '(DDD Entity) - Identifies the asset. '
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) - Reference to associated documents of significance Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
