--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/VirtualAccount.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/VirtualAccount.yaml
@@ -6,7 +6,7 @@ info:
     Virtual Account (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/VirtualAccount/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/VirtualAccount/12.0.1'
 paths:
   '/VirtualAccountFacility/{virtualaccountfacilityid}/Capture':
       put:
@@ -13928,7 +13928,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) -  Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -13986,8 +13989,9 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) -  Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -14031,7 +14035,10 @@ components:
               description: '(DDD Entity) - Agreement which is subject to a specific jurisdiction. '
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -14121,10 +14128,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) -  Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -14351,8 +14357,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -14716,7 +14723,10 @@ components:
                 provided. 
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -14817,8 +14827,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -14981,8 +14992,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -15086,10 +15098,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -15197,8 +15208,9 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) -  GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -15330,8 +15342,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -15393,8 +15406,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -15419,8 +15433,9 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) -  AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -15483,8 +15498,9 @@ components:
     Entry:
         type: object
         description: >-
-          (DDD Entity) - Posting to an account that results in an increase or decrease to a
-          balance. 
+          (DDD Entity) -  Entry|Entry
+          (https://www.iso20022.org/standardsrepository/type/Entry)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
