--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PublicReferenceDataManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/PublicReferenceDataManagement.yaml
@@ -6,8 +6,7 @@ info:
     Public Reference Data Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/PublicReferenceDataManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/PublicReferenceDataManagement/12.0.1'
 paths:
   '/GlobalStandardSpecification/{globalstandardspecificationid}/Capture':
       put:
