--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/RewardPointsAwardsAndRedemption.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/RewardPointsAwardsAndRedemption.yaml
@@ -6,8 +6,7 @@ info:
     Reward Points Awards And Redemption (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/RewardPointsAwardsAndRedemption/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/RewardPointsAwardsAndRedemption/12.0.1'
 paths:
   '/RewardPointsTransaction/{rewardpointstransactionid}/Exchange':
       put:
