--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SecuritiesPositionKeeping.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/SecuritiesPositionKeeping.yaml
@@ -6,7 +6,7 @@ info:
     Securities Position Keeping (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/SecuritiesPositionKeeping/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/SecuritiesPositionKeeping/12.0.1'
 paths:
   '/SecuritiesPositionLog/Initiate':
       post:
