--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ServiceProviderOperations.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ServiceProviderOperations.yaml
@@ -6,7 +6,7 @@ info:
     Service Provider Operations (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ServiceProviderOperations/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ServiceProviderOperations/12.0.1'
 paths:
   '/ServiceProviderRegistrationOperatingSession/{serviceproviderregistrationoperatingsessionid}/Retrieve':
       get:
@@ -309,9 +309,9 @@ components:
         description: Status Attributes
     GenericIdentification:
         type: object
-        description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+        description: |-
+          (DDD Entity) - An unique reference to an item or an occurrence of <CR>
+           GenericIdentification|GenericIdentification (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022 BM ()
         properties:
           Identification:
               type: string
