--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/StockLendingandRepos.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/StockLendingandRepos.yaml
@@ -6,7 +6,7 @@ info:
     Stock Lending and Repos (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/StockLendingandRepos/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/StockLendingandRepos/12.0.1'
 paths:
   '/RepoTransaction/{repotransactionid}/Control':
       put:
