--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/TradeConfirmationMatching.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/TradeConfirmationMatching.yaml
@@ -6,7 +6,7 @@ info:
     Trade Confirmation Matching (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/TradeConfirmationMatching/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/TradeConfirmationMatching/12.0.1'
 paths:
   '/TradeMatchingOperatingSession/{tradematchingoperatingsessionid}/Control':
       put:
@@ -3579,7 +3579,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Trade Matching Operating Session Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
