--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/TradingBookOversight.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/TradingBookOversight.yaml
@@ -6,7 +6,7 @@ info:
     Trading Book Oversight (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/TradingBookOversight/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/TradingBookOversight/12.0.1'
 paths:
   '/TradingPositionManagementPlan/{tradingpositionmanagementplanid}/Control':
       put:
@@ -3012,8 +3012,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - The set of management responsibilities defined in Trading Position
+          Management Plan Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -3075,8 +3077,10 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) - Balance of budget which is arranged whitin Trading Position
+          Management Plan Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
